traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth-auth-redirect@kubernetescrd
spec:
  rules:
    - host: traefik.nidr0x.win
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
  tls:
   - secretName: letsencrypt-prod
